<resources>
    <string name="app_name">Marketplace</string>
    <string name="searchHint">Cari di Koperasiku</string>
    <string name="categoryElectronic">Electronic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="delete">Delete</string>
    <string name="subTotal">SubTotal</string>
    <string name="subTotalPrice">Price :</string>
    <string name="belumTermasukOngkir">Belum termasuk ongkir</string>
    <string name="bayar">Bayar</string>
    <string name="namaProduk">Nama Produk</string>
    <string name="hargaProduk">Harga Produk</string>
    <string name="kurang">-</string>
    <string name="tambah">+</string>
    <string name="popularSeller">Popular Seller</string>
    <string name="viewMore">View More</string>
    <string name="browseByCategory">Browse By Category</string>
    <string name="categoryName">Nama Kategori</string>
    <string name="sellerName">Seller Name</string>
    <string name="Login">Login</string>
    <string name="inputYourEmail">Masukan Email Anda</string>
    <string name="inputYourPassword">Masukan Password Anda</string>
    <string name="belumPunyaAkun">Belum punya akun ?</string>
    <string name="register">Daftar</string>
    <string name="myAccount">My Account</string>
    <string name="sell">Jual</string>
    <string name="beli">Beli</string>
    <string name="userName">User Name</string>
    <string name="transactionList">List Transaksi</string>
    <string name="memberStatus">Member Status</string>
    <string name="userInformation">User Information</string>
    <string name="fullName">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="phone">Nomor Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="edit">Ubah Informasi User</string>
    <string name="logout">Logout</string>
    <string name="jumlahTerjual">Terjual</string>
    <string name="more">...</string>
    <string name="jumlahStok">Jumlah Stok</string>
    <string name="sisaProduk">Sisa Produk</string>
    <string name="deskripsi">Deskripsi Produk</string>
    <string name="namaToko">Nama Toko</string>
    <string name="lokasi">Lokasi</string>
    <string name="kunjungiToko">Kunjungi Toko</string>
    <string name="tambahkanKeKeranjang">Masukan Keranjang</string>
    <string name="listPembelian">List Pembelian</string>
    <string name="jualBarang">Jual Barang</string>
    <string name="listPenjualan">List Penjualan</string>
    <string name="contactUs">Contact Us</string>
    <string name="promo">Promo</string>
</resources>
