<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="@dimen/margin_medium">

    <CheckBox
        android:layout_width="@dimen/checkboxSize"
        android:layout_height="@dimen/checkboxSize"
        android:layout_margin="@dimen/margin_medium"
        android:id="@+id/checkboxProduk"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2.5"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_medium"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/namaProduk"

        android:text="@string/namaProduk"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hargaProduk"
            android:id="@+id/hargaProduk"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="@dimen/buttonOperatorWidth"
                android:layout_height="@dimen/buttonOperatorHeight"
                android:background="@drawable/box"
                android:textColor="@color/white"
                android:text="@string/kurang"
                android:id="@+id/kurangJumlahProduk"/>
            <EditText
                android:layout_width="@dimen/buttonOperatorWidth"
                android:layout_height="@dimen/buttonOperatorHeight"

                android:id="@+id/editJumlahProduk"/>
            <Button
                android:layout_width="@dimen/buttonOperatorWidth"
                android:layout_height="@dimen/buttonOperatorHeight"
                android:background="@drawable/box"
                android:textColor="@color/white"
                android:text="@string/tambah"
                android:id="@+id/tambahJumlahProduk"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/miniProdukImageWidth"
            android:layout_height="@dimen/miniProdukImage"
            android:src="@drawable/contohproduk"
            android:layout_margin="@dimen/margin_medium"
            android:scaleType="fitXY"
            />
        <Button
            android:layout_width="@dimen/miniProdukImageWidth"
            android:layout_height="@dimen/miniProdukImage"
            android:layout_margin="@dimen/margin_small"
            android:textSize="10sp"
            android:id="@+id/deleteProduk"
            android:background="@drawable/box"
            android:textColor="@color/white"

            android:text="@string/delete"/>
    </LinearLayout>
</LinearLayout>