<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxToko"
            android:layout_width="@dimen/checkboxSize"
            android:layout_height="@dimen/checkboxSize" />

        <TextView
            android:id="@+id/namaToko"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama Toko" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycleCartItem">


    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"

            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subTotalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subTotal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTotalPrice"
                android:text="@string/subTotalPrice"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belumTermasukOngkir"/>

        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonBayar"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/bayar"
        android:id="@+id/buttonBuy"
        android:background="#CE0E0E"
        android:textColor="@color/white"/>

</LinearLayout>