<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/NavHeight"
        android:background="@drawable/box"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_medium"
            android:text="@string/Login"
            android:textColor="@color/white"
            android:textSize="@dimen/fontActionBar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/inputYourEmail" />

        <EditText
            android:id="@+id/loginEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box2"
            android:layout_margin="@dimen/margin_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/inputYourPassword" />

        <EditText
            android:id="@+id/loginEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box2"
            android:layout_margin="@dimen/margin_medium"
            android:inputType="textPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/NavHeight"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/box"
            android:id="@+id/loginBtnLogin"
            android:text="@string/Login"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belumPunyaAkun" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/progress_login"/>
</LinearLayout>