<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/produkWidth"
    android:layout_height="@dimen/produkHeight"
    android:layout_margin="@dimen/margin_small"
    android:background="@drawable/box3"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/produkImage"
        android:layout_width="@dimen/produkWidthImage"
        android:layout_height="@dimen/produkHeightImage"
        android:layout_gravity="center"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/namaListProduk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="10000"
        android:text="@string/namaProduk"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hargaListProduk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:text="@string/hargaProduk"
            android:textColor="@color/white"
            android:textSize="@dimen/fontCategorySize" />

        <TextView
            android:id="@+id/listTerjualProduk"
            android:layout_width="match_parent"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_medium"
            android:text="@string/jumlahTerjual"
            android:textColor="@color/white"
            android:textSize="@dimen/fontCategorySize" />
    </LinearLayout>

</LinearLayout>