<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentStore">

    <!-- TODO: Update blank fragment layout -->

        <include layout="@layout/navbar_home" />
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/NavHeight"
            android:layout_marginBottom="50dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/popularSeller"
                android:layout_margin="@dimen/margin_medium"

                android:textSize="@dimen/titleTextMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:layout_alignParentRight="true"
                android:text="@string/viewMore" />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclePopular">

        </android.support.v7.widget.RecyclerView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/browseByCategory"
                android:layout_margin="@dimen/margin_medium"

                android:textSize="@dimen/titleTextMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:layout_alignParentRight="true"
                android:text="@string/viewMore" />

        </RelativeLayout>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycleCategory">

        </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>


</FrameLayout>